--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
 		<artifactId>groovy</artifactId>
 		<version>1.8.6</version>
 	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.1</version>
+  	</dependency>
   </dependencies>
 </project>
